--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </section>
     <section class="background">
         <h2><span class="name-highlight">Latest</span> working project</h2>
+        <div class="half-width">
 
+        </div>
     </section>
     <section class="inquery-margin">
         <div class="inquery1">
